tests/NormalTests/paczka1/fuzzy1/10381759.err
Error in line 1: VzAeembu A869 15,7
Error in line 6: Ue5W9 S886 47,28
Error in line 9: S722 S722 1,4
Error in line 27: j0TaK4x9C S886 51,6
Error in line 29: 7Lf1xXFDv S886 88,4
